Revision history for Perl extension Perl::Squish

1.04 Sat 16 Aug 2008
	- No functional changes
	- Upgrading to Module::Install 0.77

0.03 Thu 29 Jun 2007
	- No functional changes
	- Upgrading to Module::Install 0.65

0.02 Fri Jun 17 2005
	- Ported to the new PPI::Transform API

0.01 Wed May 25 2005
	- Created the initial version for the Perl.com article