@@ -11,6 +11,15 @@ this is pod
 
 Module->method();
 
+my @words  = (
+    qw/
+         foo
+
+         bar      baz               /,
+    qw (
+  hello there
+    )       )  ;
+  our @words2 = qw# one two three #;
 __END__
 
 =pod
