@@ -1,2 +1,6 @@
 print "Hello World!\n";
 Module->method;
+my @words = (
+ qw/foo bar baz/,
+ qw(hello there) ) ;
+ our @words2 = qw#one two three#;
