@@ -1,5 +1,7 @@
 Revision history for Perl extension Perl::Squish
 
+	- Strip whitespace in qw//
+
 1.04 Sat 16 Aug 2008
 	- No functional changes
 	- Upgrading to Module::Install 0.77
